# cubic_spline

./: Cargo.toml
src/: calc.rs  err.rs  lib.rs  opts.rs  opts3d.rs  points.rs  points3d.rs  points3d_iter.rs  points_iter.rs
src/tests/: mod.rs
