[package]
name = "cubic_spline"
version = "1.0.0"
authors = ["mz <emgyrz@gmail.com>"]
edition = "2021"
description = "Function that calculates curve points for cubic spline"
license = "MIT"
homepage = "https://github.com/emgyrz/cubic_spline"
repository = "https://github.com/emgyrz/cubic_spline.git"
keywords = ["cubic", "spline", "curve", "graph", "interpolation"]
categories = [ "graphics"]

readme = "README.md"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"

[lib]

crate-type = ["cdylib", "rlib"]
